<resources>
    <string name="app_name">Distance Tracker</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="normal">Normal</string>
    <string name="hybrid">Hybrid</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="none">None</string>
    <string name="map_type">Map Type</string>
    <string name="map_style">Map Style</string>
    <string name="str_normal">Normal</string>
    <string name="str_hybrid">Hybrid</string>
    <string name="str_satellite">Satellite</string>
    <string name="str_terrain">Terrain</string>
    <string name="str_none">None</string>
    <string name="str_choose">Choose</string>
    <string name="str_map_view_3d">Map view 3D</string>
    <string name="str_boundaries">Map Boundaries</string>
    <string name="strAnimateCamera">Animate Camera</string>
    <string name="animate_camera">Animate Camera</string>
    <string name="map_co_ordinates">Map Tap Co-ordinates</string>
    <string name="str_select_demo">Select Demo</string>
    <string name="str_markers_demo">Markers Demo</string>
    <string name="delete_marker">Delete Marker</string>
    <string name="marker_click">Marker click!</string>
    <string name="draggable_marker">Draggable Marker</string>
    <string name="custom_marker">Custom Marker</string>
    <string name="custom_layout_marker">Custom Layout Marker</string>
    <string name="polyline_setup_demo">Polyline setup demo</string>
    <string name="map_polygon_demo">Map Polygon Demo</string>
    <string name="map_circle_demo">Map Circle Demo</string>
    <string name="custom_polyline_demo">Custom polyline demo</string>
</resources>