<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/screen_padding"
    android:gravity="center">


    <Button
        android:id="@+id/btnMapTypeId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/map_type" />

    <Button
        android:id="@+id/btnMapStyleId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/map_style" />

    <Button
        android:id="@+id/btnMapView3dId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_map_view_3d" />

    <Button
        android:id="@+id/btnMapBoundariesId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_boundaries" />

    <Button
        android:id="@+id/btnMapAnimateCameraId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/animate_camera" />

    <Button
        android:id="@+id/btnMapTapCoOrdinatesId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/map_co_ordinates" />

    <Button
        android:id="@+id/btnMapMarkersId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_markers_demo" />

    <Button
        android:id="@+id/btnPolyLineDemoId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/polyline_setup_demo" />

    <Button
        android:id="@+id/btnPolygonDemoId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/map_polygon_demo" />

    <Button
        android:id="@+id/btnPolyCircleDemoId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/map_circle_demo" />

</LinearLayout>